--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="container">
 
     <div id="quote-box">
-      <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-      <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+      <p class="quote">Life is short - smile while you still have teeth.</p>
+      <p class="source">Unknown<span class="citation">Twitter</span><span class="year">2019</span></p>
     </div>
 
     <button id="loadQuote">Show another quote</button>
